gccida/c0/basic_induction_var
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6572:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6584:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // [rsp+5Ch] [rbp-A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6594:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+C4h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6596:13: error: expected identifier or '('
 struct set = 0LL; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6615:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6615:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6642:13: error: expected identifier or '('
 struct arg = (  struct rtx_def *)argp->rtwint; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6646:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest_reg), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6646:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest_reg), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6647:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6647:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6654:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insna = ( rtx)p[1]; ; insna = ( rtx)insna[1] ) 
                    ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6654:43: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insna = ( rtx)p[1]; ; insna = ( rtx)insna[1] ) 
                                          ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6671:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = ( rtx)insna[2]; 
            ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6680:13: error: expected identifier or '('
 struct set = v10; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6683:5: error: expected expression
&&  struct set 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6693:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6693:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/loop.c:6711:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
insn = ( rtx)insn[1]; 
             ^~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/basic_induction_var/src/obj/loop.o] Error 1
